model trained and weights json file was extracted, 98% accuracy for the model. Graphing UI is left

--- a/mnemosyne_memorized/pubspec.yaml
+++ b/mnemosyne_memorized/pubspec.yaml
@@ -30,3 +30,5 @@ flutter:
     - family: "alte haas grotesk"
       fonts:
         - asset: "fonts/AlteHaasGroteskRegular.ttf"
+  assets:
+    - "lib/data/mnist_weights.json"
