--- a/mnemosyne_memorized/l10n.yaml
+++ b/mnemosyne_memorized/l10n.yaml
@@ -1,3 +1,6 @@
 arb-dir: lib/l10n
 template-arb-file: intl_en.arb
 output-localization-file: app_localizations.dart
+use-escaping: true
+synthetic-package: false
+output-dir: lib/l10n
